[gd_scene load_steps=7 format=2]

[ext_resource path="res://font/Awake/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://interfaces/tooltip_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://interfaces/ninepatchtest.png" type="Texture" id=3]
[ext_resource path="res://notice/dialog/dialog.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="Dialog" type="NinePatchRect"]
margin_left = -175.0
margin_top = -100.0
margin_right = 175.0
margin_bottom = 100.0
texture = ExtResource( 3 )
patch_margin_left = 15
patch_margin_top = 15
patch_margin_right = 15
patch_margin_bottom = 15
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_top = 11.0
margin_right = 324.0
margin_bottom = 192.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainLabel" type="Label" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The following amount will be billed weekly:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SupplementaryLabel" type="Label" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 300.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$1000"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 121.0
margin_right = 300.0
margin_bottom = 171.0
custom_constants/separation = 75
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" parent="VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 62.0
margin_right = 112.0
text = "No"

[node name="Yes" parent="VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 187.0
margin_right = 237.0
text = "Yes"

[connection signal="pressed" from="VBoxContainer/Buttons/No" to="." method="_on_No_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Yes" to="." method="_on_Yes_pressed"]
